--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fdrN-7SPCc8?si=Cew8HSD0l2Uf5aDx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     <title>SeleçãoBrasileira</title>
 </head>
 
@@ -11,6 +14,6 @@
 <header>BrasiliansFans</header>
 
 <h1>Conquistas Alcançadas:</h1>
- <h2>Vitorias Alcançadas:</h2>
+ <h2>Vitorias Obitidas:</h2>
 </body>
 </html>
