--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             #VIDEOSAQUI
             <!--https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg-->;
              <a href="https://youtu.be/eNHYhLgXC1g?si=5Sp9vmENxvcMYZD5";
-                <img src="https://img.youtube.com/vi/eNHYhLgXC1g/maxresdefault.jpg; />
+                <img src="; />
              </a>
                
              <a href="https://youtu.be/E2aupNqxYSM?si=uvgPHNQKRO6VKHjQ";
