--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fdrN-7SPCc8?si=Cew8HSD0l2Uf5aDx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   
+    <link rel="stylesheet" href="style.css">
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -25,8 +29,8 @@
         <div class = "categoriavideos">
             #VIDEOSAQUI
             <!--https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg-->;
-             <a href="https://youtu.be/eNHYhLgXC1g?si=5Sp9vmENxvcMYZD5";
-                <img src="; />
+             <a href="https://youtu.be/eNHYhLgXC1g?si=TeJKSCOX5LZlDqrY";
+                <img src="https://img.youtube.com/vi/eNHYhLgXC1g/maxresdefault.jpg"; />
              </a>
                
              <a href="https://youtu.be/E2aupNqxYSM?si=uvgPHNQKRO6VKHjQ";
