--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <header>BrasiliansFans</header>
 
 <h1>Conquistas Alcançadas:</h1>
- <h2>Vitorias Obitidas:</h2>
+ <h2>Cinco das 22 edições encerradas até hoje terminaram com festa canarinho: 1958, 1962, 1970, 1994 e 2002. Outras duas tiveram o Brasil passando perto do título e ficando como vice-campeão: 1950 e 1958.:</h2>
 </body>
 
  <section>
