bara de rolagem com os videos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+   <style>
+.container {
+    display: flex;
+    overflow-x: auto; /* habilita rolagem horizontal */
+    gap: 10px;        /* espaço entre os vídeos */
+    padding: 10px;
+  }
+  .container video {
+    width: 300px;  /* ajuste o tamanho dos vídeos */
+    border-radius: 8px;
+
+   </style>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/fdrN-7SPCc8?si=Cew8HSD0l2Uf5aDx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    
@@ -25,6 +36,16 @@
      sendo o maior campeão da história do torneio.
      As conquistas foram em 1958, 1962, 1970, 1994 e 2002,
       tornando-se pentacampeão mundial.</h3>
+
+<div class="container">
+  <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/zBoQBojYh70?si=-bBJnydlDgruZwBP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" controls></video>
+  <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/E2aupNqxYSM?si=6rhZNQ3Na4cfaonY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" controls></video>
+  <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/MZOQh1Oe7B8?si=nj6LzMS8WlHjhAdV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" controls></video>
+  <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/glrmIycH_9Q?si=3vmf4of6zHiFzK6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" controls></video>
+  <video src="<iframe width="560" height="315" src="https://www.youtube.com/embed/CS6UWDU0uSs?si=YrgSV4FSO941TFB6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" controls></video>
+</div>
+
+
 </body>
 
  <section>
