--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     .container {
       display: flex;
       overflow-x: auto; /* habilita rolagem horizontal */
-      gap: 10px;        /* espaço entre os vídeos */
+      gap: 10px;   
       padding: 10px;
     }
     .container iframe {
-      width: 300px;  /* ajuste o tamanho dos vídeos */
+      width: 300px;  
       height: 170px;
       border-radius: 8px;
     }
