--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <style>
     .container {
       display: flex;
-      overflow-x: auto; /* habilita rolagem horizontal */
-      gap: 30px;   
+      overflow-x: auto; /* barra da rolagem horizontal */
+      gap: 25px;   
       padding: 20px;
     }
     .container iframe {
-      width: 300px;  
-      height: 170px;
-      border-radius: 8px;
+      width: 400px;  
+      height: 270px;
+      border-radius: 60px; /* deixa as bordas arrendondadas */
     }
   </style>
   <title>Seleção Brasileira</title>
@@ -30,7 +30,7 @@
   tornando-se pentacampeão mundial.
 </h3>
 
-<!-- Barra rolável com 5 vídeos -->
+
 <div class="container">
   <iframe src="https://www.youtube.com/embed/zBoQBojYh70" frameborder="0" allowfullscreen></iframe>
   <iframe src="https://www.youtube.com/embed/E2aupNqxYSM" frameborder="0" allowfullscreen></iframe>
