--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       display: flex;
       overflow-x: auto; /* barra da rolagem horizontal */
       gap: 25px;   
-      padding: 20px;
+      padding: 20px; /* espaçamento */
     }
     .container iframe {
       width: 400px;  
