--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     .container {
       display: flex;
       overflow-x: auto; /* barra da rolagem horizontal */
-      gap: 25px;   
+      gap: 25px;   /* tamanha dos videos ou é o debaixo*/
       padding: 20px; /* espaçamento */
     }
     .container iframe {
-      width: 400px;  
-      height: 270px;
+      width: 400px;  /* largura dos videos */ 
+      height: 270px; /* altura dos videos */
       border-radius: 60px; /* deixa as bordas arrendondadas */
     }
   </style>
