--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href= "style.css">
   <style>
     .container {
       display: flex;
@@ -11,9 +12,9 @@
       padding: 20px; /* espaçamento */
     }
     .container iframe {
-      width: 400px;  /* largura dos videos */ 
+      width: 300px;  /* largura dos videos */ 
       height: 270px; /* altura dos videos */
-      border-radius: 200px; /* deixa as bordas arrendondadas */
+      border-radius: 110px; /* deixa as bordas arrendondadas */
     }
   </style>
   <title>Seleção Brasileira</title>
