--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     .container {
       display: flex;
       overflow-x: auto; /* barra da rolagem horizontal */
-      gap: 25px;   /* tamanha dos videos ou é o debaixo*/
-      padding: 20px; /* espaçamento */
+      gap: 25px;   /* tamanho dos videos espaçamento*/
+      padding: 20px; /* tamanho dos videos */
     }
     .container iframe {
       width: 300px;  /* largura dos videos */ 
