--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href= "style.css">
   <style>
     .container {
-      display: flex;
+      display: flex; /* ELE CETRALIZA AS IMAGENS E AS CORDENAS*/
       overflow-x: auto; /* barra da rolagem horizontal */
       gap: 25px;   /* tamanho dos videos espaçamento*/
       padding: 20px; /* tamanho dos videos */
